# component

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
examples/: deps.rs
examples/simple/: app.rs  main.rs
examples/simple/components/: config.rs  logging.rs  mod.rs  server.rs  system.rs
src/: component.rs  deps.rs  lib.rs  main.rs  types.rs
