[package]
name = "oxur-component"
version = "0.1.2"
description = "Enabling the creation of application components with lifecycle and dependency support"
readme = "README.md"
license = "MIT"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/component"
documentation = "https://docs.rs/oxur-component/"
categories = ["development-tools"]
keywords = ["components", "dependencies", "dependency-injection", "systems"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2018"

[lib]
name = "component"

[dependencies]
petgraph = "0.5.0"
